[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "crashsight"
version = "1.0.0"
description = "CrashSight OpenAPI Python SDK"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
  "requests>=2.28",
]
authors = [
  { name = "Tencent CrashSight" },
]
keywords = ["crashsight", "openapi", "sdk", "python"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
]

[project.urls]
Homepage = "https://github.com/TencentCrashSight/crashsight-python-sdk"
Documentation = "https://github.com/TencentCrashSight/crashsight-api-docs"

[tool.setuptools]
packages = ["crashsight"]
